changed the file names to reflect that this is the pro version.

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "potLimitCalculator",
+  "name": "potLimitCalculatorPro",
   "app_id": "",
   "type": "ionic-angular",
   "integrations": {
